--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      line-height: 1.1;
+      line-height: 1.2;
     }
 
     .hero h2 {
@@ -530,7 +530,7 @@
       font-size: 1.5rem;
       font-weight: 600;
       color: var(--text-highlight);
-      padding: 2rem 2rem 0;
+      padding: 2rem 2rem 2rem;
       cursor: pointer;
       display: flex;
       justify-content: space-between;
