--- a/plans.html
+++ b/plans.html
@@ -46,54 +46,7 @@
       -moz-osx-font-smoothing: grayscale;
     }
 
-    /* Background Effects */
-    .background-particles {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -2;
-      pointer-events: none;
-    }
-
-    .particle {
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      background: var(--primary);
-      opacity: 0.6;
-      animation: float 15s infinite linear;
-    }
-
-    .particle:nth-child(1) { left: 10%; animation-delay: 0s; background: var(--primary); }
-    .particle:nth-child(2) { left: 20%; animation-delay: 2s; background: var(--secondary); }
-    .particle:nth-child(3) { left: 30%; animation-delay: 4s; background: var(--icon-pink); }
-    .particle:nth-child(4) { left: 40%; animation-delay: 6s; background: var(--primary); }
-    .particle:nth-child(5) { left: 50%; animation-delay: 8s; background: var(--icon-purple); }
-    .particle:nth-child(6) { left: 60%; animation-delay: 10s; background: var(--primary); }
-    .particle:nth-child(7) { left: 70%; animation-delay: 12s; background: var(--secondary); }
-    .particle:nth-child(8) { left: 80%; animation-delay: 14s; background: var(--icon-pink); }
-    .particle:nth-child(9) { left: 90%; animation-delay: 16s; background: var(--primary); }
-    .particle:nth-child(10) { left: 15%; animation-delay: 18s; background: var(--icon-purple); }
-
-    @keyframes float {
-      0% {
-        transform: translateY(100vh) rotate(0deg);
-        opacity: 0;
-      }
-      10% {
-        opacity: 0.6;
-      }
-      90% {
-        opacity: 0.6;
-      }
-      100% {
-        transform: translateY(-100px) rotate(360deg);
-        opacity: 0;
-      }
-    }
+    /* Background Effects - Particles Removed */
 
     .background-ambient {
       position: fixed;
@@ -113,9 +66,9 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: var(--surface);
+      background: rgba(16, 14, 33, 0.95);
       backdrop-filter: blur(20px);
-      border-bottom: 1px solid var(--border);
+      border-bottom: 1px solid rgba(192, 132, 252, 0.15);
       padding: 1rem 0;
       z-index: 1000;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -123,7 +76,7 @@
 
     .navbar.scrolled {
       padding: 0.75rem 0;
-      background: rgba(42, 38, 58, 0.98);
+      background: rgba(16, 14, 33, 0.98);
     }
 
     .navbar-container {
@@ -136,18 +89,24 @@
     }
 
     .navbar-logo a {
-      font-size: 1.75rem;
-      font-weight: 800;
-      background: var(--gradient);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      display: flex;
+      align-items: center;
       text-decoration: none;
       transition: all 0.3s ease;
     }
 
+    .navbar-logo img {
+      height: 40px;
+      width: auto;
+      transition: all 0.3s ease;
+    }
+
+    .navbar-logo:hover img {
+      transform: scale(1.05);
+    }
+
     .back-link {
-      color: var(--text-muted);
+      color: var(--text);
       text-decoration: none;
       font-size: 0.875rem;
       font-weight: 500;
@@ -157,7 +116,7 @@
       padding: 0.5rem 1rem;
       border-radius: 8px;
       transition: all 0.3s ease;
-      background: var(--surface-light);
+      background: rgba(42, 38, 58, 0.7);
       border: 1px solid var(--border);
     }
 
@@ -210,7 +169,7 @@
 
     /* Plan Cards */
     .plan-card {
-      background: var(--surface-light);
+      background: rgba(42, 38, 58, 0.8);
       border-radius: 16px;
       padding: 2rem 1.5rem 1.5rem;
       position: relative;
@@ -229,7 +188,8 @@
     .plan-card:hover {
       border-color: var(--primary);
       transform: translateY(-8px);
-      box-shadow: 0 20px 40px rgba(192, 132, 252, 0.2);
+      box-shadow: 0 20px 40px rgba(192, 132, 252, 0.3);
+      background: rgba(42, 38, 58, 0.95);
     }
 
     /* Promotional badges */
@@ -438,7 +398,7 @@
     }
 
     .comparison-table {
-      background: var(--surface-light);
+      background: rgba(42, 38, 58, 0.8);
       border: 1px solid var(--border);
       border-radius: 16px;
       overflow: hidden;
@@ -563,24 +523,14 @@
 </head>
 <body>
   <div class="background-ambient"></div>
-  <div class="background-particles">
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-    <div class="particle"></div>
-  </div>
 
   <!-- Header -->
   <header class="navbar" id="navbar">
     <div class="navbar-container">
       <div class="navbar-logo">
-        <a href="index.html">VoidedMC</a>
+        <a href="index.html">
+          <img src="server-icon.png" alt="VoidedMC Logo" />
+        </a>
       </div>
       <a href="javascript:history.back()" class="back-link">
         ← Back
